--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
-/* Import Poppins Font */ 
+/* Import Poppins Font */
 body {
     margin: 0;
     font-family: 'Poppins', sans-serif;
-    background: black;
+    background: #051523FF;
     color: white;
     display: flex;
     justify-content: center;
@@ -24,7 +24,7 @@ body {
     height: 150px;
     padding: 10px;
     border-radius: 15px;
-    background: #333;
+    background: #005197FF;
     color: white;
     text-align: center;
     transition: background 0.3s ease-in-out;
